# atlasui

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONFIGURATION_TOOL.md  CONTRIBUTING.md  QUICKSTART.md  README.md  README.pypi.md  SECURITY.md  SETUP.md  pyproject.toml  run_lifecycle_tests.py  tasks.py
.github/workflows/: publish.yml  tests.yml
atlasui/: __init__.py  config.py  configure.py  manage.py  operations_manager.py  server.py  setup.py
atlasui/api/: alerts.py  backups.py  clusters.py  databases.py  organizations.py  pages.py  projects.py  server.py  setup.py  users.py
atlasui/cli/: main.py
atlasui/client/: base.py
atlasui/static/js/: operations-queue.js
atlasui/templates/: all_clusters.html  all_projects.html  base.html  clusters.html  databases.html  organizations.html  projects.html  setup.html
docs/: MARKDOWN_CONVERSION.md  TEST_OPTIMIZATION.md  conf.py  features.md  index.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst  requirements.txt  security.md  security.rst  service_accounts.md
tests/: README.md  TEST_CLUSTER_LIFECYCLE.md  TEST_SUMMARY.md  __init__.py  cleanup_test_resources.py  conftest.py  test_api.py  test_api_integration.py  test_client.py  test_client_service_account.py  test_cluster_features.py  test_cluster_lifecycle.py  test_cluster_lifecycle_smoke.py  test_config.py  test_create_cluster_ui.py  test_create_clusters_all_types.py  test_integration.py
