[project]
name = "atlasui"
version = "0.1.7"
description = "User Interface for MongoDB Atlas - Web UI and CLI tool"
readme = "README.md"
authors = [
    {name = "Joe Drumgoole"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "pymongo>=4.10.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "invoke>=2.2.0",
]
docs = [
    "sphinx>=8.1.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=2.5.0",
    "myst-parser>=4.0.0",
]

[project.scripts]
atlasui = "atlasui.manage:main"
atlasui-cli = "atlasui.cli:app"
atlasui-server = "atlasui.server:main"
atlasui-configure = "atlasui.configure:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require valid API credentials)",
]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
